resolved fdo#45032 Calc export to HTML with graphics failed

Fixed a misconception in transition from List to to ptr_vector of commit
db599f64e63a3141159b7f0e59783197c39b3e02, List::Next() returned NULL when at
end of list, mimic that.